--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
 body {
     background-color: #23252C;
     margin-bottom: 50px;
+    font-family: 'Inter', sans-serif;
+}
+
+.app {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .info--profile {
@@ -62,8 +70,9 @@ body {
     justify-content: center;
     gap: 5px;
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 600;
     border-radius: 5px;
+    text-decoration: none;
 }
 
 .email {
@@ -126,6 +135,11 @@ body {
     color: white;
 }
 
+.footer i {
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+}
+
 .footer i:hover {
-    color: #333;
+    transform: scale(1.3);
 }
